--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/lightsofapollo/continuous-log-serve",
   "dependencies": {
     "mocha": "^1.21.4",
-    "promise": "^5.0.0"
+    "promise": "^5.0.0",
+    "split": "^0.3.0"
   }
 }
