--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ go:
   - 1.4
   - tip
 
-before_script:
-  - go generate ./...
+script:
+  - ./build.sh
 
 # currently cannot customise per user fork, see:
 # https://github.com/travis-ci/travis-ci/issues/1094
