Publish CI notifications to #taskcluster-bots irc channel instead of #taskcluster-golang

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 notifications:
   irc:
     channels:
-      - "irc.mozilla.org#taskcluster-golang"
+      - "irc.mozilla.org#taskcluster-bots"
     on_success: always
     on_failure: always
     template:
