--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: go
 go:
   - 1.4
 
+script:
+  - go env
+  - go get -t -v ./...
+  - go test -v ./...
+  - go vet ./...
+
 # currently cannot customise per user fork, see:
 # https://github.com/travis-ci/travis-ci/issues/1094
 notifications:
