--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,18 @@ language: go
 go:
   - 1.4
 
+env:
+  - GIMME_OS=linux GIMME_ARCH=amd64
+  - GIMME_OS=darwin GIMME_ARCH=amd64
+  - GIMME_OS=windows GIMME_ARCH=amd64
+
+install:
+  - go get -d -v ./...
+
 script:
-  - ./build.sh
+  - go install -v ./...
+  - go vet ./...
+  - go test ./...
 
 # currently cannot customise per user fork, see:
 # https://github.com/travis-ci/travis-ci/issues/1094
