Trying another travis hack

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ install:
 
 script:
   - go install -v ./...
-  - go get golang.org/x/tools/cmd/vet
-  - go vet ./...
+  - [ "${GOARCH}" == "linux" ] && go vet ./...
   - go test ./...
 
 # currently cannot customise per user fork, see:
