--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 
 script:
   - go install -v ./...
-  - [ "${GOARCH}" == "linux" ] && go vet ./...
+  - test "${GOARCH}" == "linux" && go vet ./...
   - go test ./...
 
 # currently cannot customise per user fork, see:
