--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 - go install -v ./...
 - go test ./...
 before_deploy:
-- ./.travis_rename_releases.sh
+- source .travis_rename_releases.sh
 deploy:
   provider: releases
   api_key:
