--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: python
 python:
-#  - "2.6"
-  - "2.7"
-#  - "3.2"
-#  - "3.3"
-#  - "3.4"
-  - "pypy"
-#  - "pypy3"
+  - 2.7
+  - pypy
+
 env:
   NO_TESTS_OVER_WIRE=1
+
 # command to install dependencies
 install:
-  - "pip install virtualenv"
-  - "make dev-env"
+  - pip install virtualenv
+  - make dev-env
+
 # command to run tests
 script:
-  - "make test"
+  - make test
