--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.eggs/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -72,3 +73,5 @@ docs/_build/
 
 # PyBuilder
 target/
+# hypothesis cache
+.hypothesis/
