--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,56 @@
 language: go
+
 go:
-- 1.4
+  - 1.4
+
 env:
-- GIMME_OS=linux GIMME_ARCH=386
-- GIMME_OS=darwin GIMME_ARCH=386
-- GIMME_OS=windows GIMME_ARCH=386
-- GIMME_OS=linux GIMME_ARCH=amd64
-- GIMME_OS=darwin GIMME_ARCH=amd64
-- GIMME_OS=windows GIMME_ARCH=amd64
+  - "GIMME_OS=linux GIMME_ARCH=386"
+  - "GIMME_OS=darwin GIMME_ARCH=386"
+  - "GIMME_OS=windows GIMME_ARCH=386"
+  - "GIMME_OS=linux GIMME_ARCH=amd64"
+  - "GIMME_OS=darwin GIMME_ARCH=amd64"
+  - "GIMME_OS=windows GIMME_ARCH=amd64"
+
+before_install:
+  - "go get github.com/axw/gocov/gocov"
+  - "go get github.com/mattn/goveralls"
+  - "go get golang.org/x/tools/cmd/cover"
+  - "go get golang.org/x/tools/cmd/vet"
+  - "go get github.com/pierrre/gotestcover"
+
 install:
-- go get -d -v ./...
+  - "go get -d -v ./..."
+
 script:
-- go install -v ./...
-- go test ./...
+  - "go install -v ./..."
+  - "${GOPATH}/bin/gotestcover -v -coverprofile=coverage.report ./..."
+  - "go tool cover -func=coverage.report"
+
+after_script:
+  - "$HOME/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci"
+
 before_deploy:
-- source .travis_rename_releases.sh
+  - "source .travis_rename_releases.sh"
+
 deploy:
-  provider: releases
   api_key:
     secure: KuifEWzfB5C9GFHMjFpSpbHWLN9cs/1afRuJhP4aADU3i55zb0QDzIu6+aGLlL0jsV5T07AqgPvJm4bOQNnWVhlhyHStrkIdzUpCtiCVNnPH3cYUkJ4/0zJyJaopnZfuX/2m2F+ajNC2Z94mxuu4qUUgqFO9x708xy0LYCofTEU=
   file:
     - "${RELEASE_FILE}"
+  provider: releases
   skip_cleanup: true
   on:
-    tags: true
     repo: taskcluster/generic-worker
+    tags: true
 
 notifications:
   irc:
     channels:
-    - irc.mozilla.org#taskcluster-bots
-    on_success: always
+      - "irc.mozilla.org#taskcluster-bots"
     on_failure: always
+    on_success: always
     template:
-    - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
-    - 'Change view : %{compare_url}'
-    - 'Build details : %{build_url}'
-    - 'Commit message : %{commit_message}'
+      - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
+      - "Change view : %{compare_url}"
+      - "Build details : %{build_url}"
+      - "Commit message : %{commit_message}"
