Stopped using gotestcover since returns 0 exit code even if tests fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ before_install:
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
   - go get golang.org/x/tools/cmd/vet
-  - go get github.com/pierrre/gotestcover
 
 script:
-  - ${HOME}/gopath/bin/gotestcover -v -coverprofile=coverage.report ./...
+  - go test -v -coverprofile=coverage.report ./...
 
 after_script:
   - go tool cover -func=coverage.report
