Added PurgeCacheEvents to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,9 @@
   "QueueEvents": "http://references.taskcluster.net/queue/v1/exchanges.json",
   "Scheduler": "http://references.taskcluster.net/scheduler/v1/api.json",
   "SchedulerEvents": "http://references.taskcluster.net/scheduler/v1/exchanges.json",
-  "Index": "http://references.taskcluster.net/index/v1/api.json"
+  "Index": "http://references.taskcluster.net/index/v1/api.json",
+  "AwsProvisioner": "http://references.taskcluster.net/aws-provisioner/v1/api.json",
+  "AwsProvisionerEvents": "http://references.taskcluster.net/aws-provisioner/v1/exchanges.json",
+  "PurgeCache": "http://references.taskcluster.net/purge-cache/v1/api.json",
+  "PurgeCacheEvents": "http://references.taskcluster.net/purge-cache/v1/exchanges.json"
 }
