--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,29 @@
 language: go
-
+sudo: false
 go:
-  - 1.4
-
+- 1.4
 before_install:
-  - go get github.com/axw/gocov/gocov
-  - go get github.com/mattn/goveralls
-  - go get golang.org/x/tools/cmd/cover
-  - go get golang.org/x/tools/cmd/vet
-
+- go get github.com/axw/gocov/gocov
+- go get github.com/mattn/goveralls
+- go get golang.org/x/tools/cmd/cover
+- go get golang.org/x/tools/cmd/vet
 script:
-  - go test -v -coverprofile=coverage.report github.com/taskcluster/taskcluster-proxy/taskcluster
-
+- go test -v -coverprofile=coverage.report github.com/taskcluster/taskcluster-proxy/taskcluster
 after_script:
-  - go tool cover -func=coverage.report
-  - ${HOME}/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci
-
-# currently cannot customise per user fork, see:
-# https://github.com/travis-ci/travis-ci/issues/1094
+- go tool cover -func=coverage.report
+- "${HOME}/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci"
 notifications:
   irc:
     channels:
-      - "irc.mozilla.org#taskcluster-bots"
+    - irc.mozilla.org#taskcluster-bots
     on_success: always
     on_failure: always
     template:
-      - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
-      - "Change view : %{compare_url}"
-      - "Build details : %{build_url}"
-      - "Commit message : %{commit_message}"
+    - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
+    - 'Change view : %{compare_url}'
+    - 'Build details : %{build_url}'
+    - 'Commit message : %{commit_message}'
+env:
+  global:
+  - secure: "b/KGFHfQ5TxHAb/tJN4X7tbfWhTvDph8QINiC0NbaYd6R1POIKxSo12w5t/ZPZKKB18Dr6k0XZhqNxOx7hUHpj9wEiB82+zkPHsYAtadhCfojYfU3uS7uslopdauW215CcTTVERopDkid+jLVE02k/gd01AlJbB3gIFFjAA1T4k="
+  - secure: "V37WMzSuRWd2U8CgwB+p4IyXJ3jdKlJ7p0K3ITv6gtPUC/2v0WSXTU5ikJc2zjOf0irwZgAzHIvHalwULvpKBXbDSIl6JAR0eB6TO8+Tmf/RxhKPyS0tYpgVHvmO2bbHs6B0ArtwQv92FOoj8dev/mOd3+bLeJ0844wUDA15UMU="
