--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - go get github.com/pierrre/gotestcover
 
 script:
-  - ./build.sh -d
+  - ./build.sh
 
 after_script:
   - $HOME/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci
