Stopped using .exe filetype in test due to different results between platforms (OS X, linux)

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@ _cgo_export.*
 
 _testmain.go
 
-# needed for test of mime type conversion - so allowing .exe files
-# *.exe
+*.exe
 *.test
 *.prof
 
