--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ notifications:
       - "Build details : %{build_url}"
       - "Commit message : %{commit_message}"
 
+before_deploy:
+  - "source .travis_rename_releases.sh"
+
 deploy:
   provider: releases
   api_key:
