--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ env:
   - "GIMME_OS=darwin GIMME_ARCH=amd64"
   - "GIMME_OS=windows GIMME_ARCH=amd64"
 
+# workaround for travis-ci/gimme#25 to pick up latest version of gimme and run again
+before_install:
+  - eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | bash)"
+
 install:
   - go get -d -t ./...
   - "if test $GIMME_OS.$GIMME_ARCH = linux.amd64; then npm install; fi"
