--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 
 go:
-  - 1.4
+  - 1.5
 
 env:
   - "GIMME_OS=linux GIMME_ARCH=amd64"
@@ -10,7 +10,7 @@ env:
 
 # workaround for travis-ci/gimme#25 to pick up latest version of gimme and run again
 before_install:
-  - eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | bash)"
+  - eval "$(curl -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme | GIMME_GO_VERSION=1.5 bash)"
 
 install:
   - go get -d -t ./...
