--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
 before_install:
   - curl -o gimme -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme
   - chmod u+x gimme
+  - unset GOROOT GOTOOLDIR
   - eval $(./gimme 1.5)
   - go version
   - go env
