--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   - "GIMME_OS=linux GIMME_ARCH=amd64"
   - "GIMME_OS=darwin GIMME_ARCH=amd64"
   - "GIMME_OS=windows GIMME_ARCH=amd64"
+  - "GIMME_OS=windows GIMME_ARCH=x86"
 
 before_install:
 # workaround for travis-ci/gimme#25 to pick up latest version of gimme and run again
