--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,13 @@ before_install:
 - go get github.com/mattn/goveralls
 - go get golang.org/x/tools/cmd/cover
 - go get golang.org/x/tools/cmd/vet
+- go get github.com/pierrre/gotestcover
 script:
-- go test -v -coverprofile=coverage.report github.com/taskcluster/taskcluster-proxy/taskcluster
+# since gotestcover can have 0 exit code even with failures, run tests with go
+# test, and only run again with coverage in `after_script` section
+- go test -v ./...
 after_script:
+- "${GOPATH}/bin/gotestcover" -v -coverprofile=coverage.report ./...
 - go tool cover -func=coverage.report
 - "${HOME}/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci"
 notifications:
@@ -20,9 +24,9 @@ notifications:
     on_failure: always
     template:
     - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
-    - 'Change view : %{compare_url}'
-    - 'Build details : %{build_url}'
-    - 'Commit message : %{commit_message}'
+    - "Change view : %{compare_url}"
+    - "Build details : %{build_url}"
+    - "Commit message : %{commit_message}"
 env:
   global:
   - secure: "b/KGFHfQ5TxHAb/tJN4X7tbfWhTvDph8QINiC0NbaYd6R1POIKxSo12w5t/ZPZKKB18Dr6k0XZhqNxOx7hUHpj9wEiB82+zkPHsYAtadhCfojYfU3uS7uslopdauW215CcTTVERopDkid+jLVE02k/gd01AlJbB3gIFFjAA1T4k="
