--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: go
 sudo: false
 go:
 - 1.4
+env:
+  - "GIMME_OS=linux GIMME_ARCH=amd64"
+  - "GIMME_OS=darwin GIMME_ARCH=amd64"
+  - "GIMME_OS=windows GIMME_ARCH=amd64"
+  - "GIMME_OS=windows GIMME_ARCH=386"
 before_install:
 - go get github.com/axw/gocov/gocov
 - go get github.com/mattn/goveralls
