--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ notifications:
     channels:
       - "irc.mozilla.org#taskcluster-bots"
     on_failure: always
-    on_success: always
+    on_success: change
     template:
       - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
       - "Change view : %{compare_url}"
