--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ notifications:
   irc:
     channels:
       - "irc.mozilla.org#taskcluster-bots"
-    on_success: always
+    on_success: change
     on_failure: always
     template:
       - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
