--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ notifications:
     channels:
       # encrpyted string was "irc.mozilla.org#taskcluster-bots"
       - secure: "EcOYIepqv18ohTPA3rMkHyUCcKzwSGoSrmJoWYksWJYuwbnIMqYsLbgqY8AOkxD/okPMbj3mBAArAo4mRutGWrsCQQrBBK9hxIhj3abdBf6120EjUSWOTdIFIkmSepQeat6/8KJONkSwyCBjnjPs3bhSH1hYY1qsRrHo8g2OUJI="
-    on_success: always
+    on_success: change
     on_failure: always
     template:
       - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
