Now only send IRC notifications if travis job fails or recovers

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ notifications:
   irc:
     channels:
     - secure: aYfRwI+g4L9xkUXXKWFx7TuR4TojGVjnUWEx74TvrrAeNqJd1+9vZdtohncQxvArpx0gRHVfVc6n2AZoBNUgo2dSqTBWVwtUQfGf0JyQddS6MdTJzHS2aoNgGRWUwRznjZzloD0eZZfeW+/nbYsfSS12Edl3YNT4X8/rhlHVtO4=
-    on_success: always
+    on_success: change
     on_failure: always
     template:
     - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
