--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,18 @@ install:
 # command to run tests
 script:
   - make test
+
+# encrpyt channel name to get around issue
+# https://github.com/travis-ci/travis-ci/issues/1094
+notifications:
+  irc:
+    channels:
+      # encrpyted string was "irc.mozilla.org#taskcluster-bots"
+      - secure: "I8h0AP0UKI2TaETVComWxWFGceaUgYNC4xlVTuDhsAteFUUYNL/ZnJqtKOGKxAem7kjngWYMhZyLJSfgXr5ev9HEkCansLh11UVHkytx/nlmJdcL0peMRFh1pQCVTKWSMywU/wbJZ4EgjZYMfSAcSHze/b5WqqQPP85YvbLb7dE="
+    on_success: change
+    on_failure: always
+    template:
+      - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
+      - "Change view : %{compare_url}"
+      - "Build details : %{build_url}"
+      - "Commit message : %{commit_message}"
