--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,13 @@
 [tox]
-envlist = py27
+envlist =
+    py27
+    py35
+    pypy
+skip_missing_interpreters = True
 
 [testenv]
 passenv =
     NO_TESTS_OVER_WIRE
-    NO_PRODUCTION_TESTS
 
 commands =
     {envbindir}/python devDep.py
