readd production tests

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,13 @@
 envlist = py27
 
 [testenv]
+passenv =
+    NO_TESTS_OVER_WIRE
+    NO_PRODUCTION_TESTS
+    TASKCLUSTER_CLIENT_ID
+    TASKCLUSTER_ACCESS_TOKEN
+    TASKCLUSTER_CERTIFICATE
+
 commands =
     {envbindir}/python devDep.py
     {envbindir}/python setup.py develop
