install tox in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 # command to install dependencies
 install:
-  - pip install virtualenv
+  - pip install virtualenv tox
   - make dev-env
 
 # command to run tests
