--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,15 @@
 language: go
 
 go:
-  - 1.5
+  - 1.6
 
 env:
-  - "GIMME_OS=linux GIMME_ARCH=amd64"
-  - "GIMME_OS=darwin GIMME_ARCH=amd64"
-  - "GIMME_OS=windows GIMME_ARCH=amd64"
-  - "GIMME_OS=windows GIMME_ARCH=386"
+  - "MY_GOOS=linux MY_GOARCH=amd64"
+  - "MY_GOOS=darwin MY_GOARCH=amd64"
+  - "MY_GOOS=windows MY_GOARCH=amd64"
+  - "MY_GOOS=windows MY_GOARCH=386"
 
 before_install:
-# workaround for travis-ci/gimme#25 to pick up latest version of gimme and run again
-  - curl -o gimme -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme
-  - chmod u+x gimme
-  - unset GOROOT GOTOOLDIR
-  - eval "$(./gimme 1.5)"
-  - go version
-  - go env
-# end of workaround ###
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - go get github.com/pierrre/gotestcover
@@ -27,8 +19,10 @@ install:
   - "go get github.com/taskcluster/livelog"
 
 script:
+  - export GOOS="${MY_GOOS}"
+  - export GOARCH="${MY_GOARCH}"
   - "go install -v ./..."
-  - "if test $GIMME_OS.$GIMME_ARCH = linux.amd64; then ${GOPATH}/bin/gotestcover -v -coverprofile=coverage.report ./... && go tool cover -func=coverage.report; fi"
+  - "if test $GOOS.$GOARCH = linux.amd64; then ${GOPATH}/bin/gotestcover -v -coverprofile=coverage.report ./... && go tool cover -func=coverage.report; fi"
 
 after_script:
   - "$HOME/gopath/bin/goveralls -coverprofile=coverage.report -service=travis-ci"
