try again to fix travis...

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ env:
   - "MY_GOOS=windows MY_GOARCH=386"
 
 before_install:
+  - curl -o go.tar.gz -sL https://storage.googleapis.com/golang/go1.6.3.linux-amd64.tar.gz
+  - tar go.tar.gz
+  - export GOROOT="$(pwd)/go"
+  - export PATH="${GOROOT}/bin:${PATH}"
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - go get github.com/pierrre/gotestcover
