--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 before_install:
   - curl -o go.tar.gz -sL https://storage.googleapis.com/golang/go1.6.3.linux-amd64.tar.gz
-  - tar go.tar.gz
+  - tar xvf go.tar.gz
   - export GOROOT="$(pwd)/go"
   - export PATH="${GOROOT}/bin:${PATH}"
   - go get github.com/axw/gocov/gocov
