--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,29 @@ go:
   - 1.5
 
 env:
-  - "GIMME_OS=linux GIMME_ARCH=amd64"
-  - "GIMME_OS=darwin GIMME_ARCH=amd64"
-  - "GIMME_OS=windows GIMME_ARCH=amd64"
-  - "GIMME_OS=windows GIMME_ARCH=386"
+  - "MY_GOOS=linux MY_GOARCH=amd64"
+  - "MY_GOOS=darwin MY_GOARCH=amd64"
+  - "MY_GOOS=windows MY_GOARCH=amd64"
+  - "MY_GOOS=windows MY_GOARCH=386"
 
-# workaround for travis-ci/gimme#25 to pick up latest version of gimme and run again
 before_install:
-  - curl -o gimme -sL https://raw.githubusercontent.com/travis-ci/gimme/master/gimme
-  - chmod u+x gimme
-  - unset GOROOT GOTOOLDIR
-  - eval "$(./gimme 1.5)"
-  - go version
-  - go env
+# workaround for travis-ci/gimme#42
+  - curl -o go.tar.gz -sL https://storage.googleapis.com/golang/go1.6.3.linux-amd64.tar.gz
+  - tar -C $HOME -xf go.tar.gz
+  - rm go.tar.gz
+  - export GOROOT="${HOME}/go"
+  - export PATH="${GOROOT}/bin:${PATH}"
+  - export GOOS="${MY_GOOS}"
+  - export GOARCH="${MY_GOARCH}"
+# end of workaround ###
 
 install:
   - go get -d -t ./...
-  - "if test $GIMME_OS.$GIMME_ARCH = linux.amd64; then npm install; fi"
+  - "if test $GOOS.$GOARCH = linux.amd64; then npm install; fi"
 
 script:
   - go install -v ./...
-  - "if test $GIMME_OS.$GIMME_ARCH = linux.amd64; then npm test; fi"
+  - "if test $GOOS.$GOARCH = linux.amd64; then npm test; fi"
 
 notifications:
   irc:
