lint and test fixes, also adding async/client.py which I forgot to earlier

--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,20 @@ envlist =
     py27
     py35
 
+[testenv:py27]
+setenv =
+    NOSE_EXCLUDE_DIRS = test/async;taskcluster/async
+
+[testenv:py35]
+setenv =
+    NOSE_EXCLUDE_DIRS =
+
 [testenv]
 passenv =
     NO_TESTS_OVER_WIRE
 
 commands =
     {envbindir}/python devDep.py
+    {envbindir}/python genCode.py
     {envbindir}/python setup.py develop
     {envbindir}/coverage run -a --source taskcluster --branch {envbindir}/nosetests -v --with-xunit --rednose --force-color
