deal with async files in python 2.7 in a different way.

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,12 @@ envlist =
 [testenv:py27]
 setenv =
     NOSE_EXCLUDE_DIRS = test/async;taskcluster/async
+    NOSE_EXCLUDE_TESTS = test/async;
 
 [testenv:py35]
 setenv =
     NOSE_EXCLUDE_DIRS =
+    NOSE_EXCLUDE_TESTS =
 
 [testenv]
 passenv =
