be more explicit about dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -21,4 +21,4 @@ commands =
     {envbindir}/python devDep.py
     {envbindir}/python genCode.py
     {envbindir}/python setup.py develop
-    {envbindir}/coverage run -a --source taskcluster --branch {envbindir}/nosetests -v --with-xunit --rednose --force-color
+    {envbindir}/nosetests -v --with-xunit --rednose --force-color
