--- a/tox.ini
+++ b/tox.ini
@@ -3,22 +3,35 @@ envlist =
     py27
     py35
 
+# There's a really weird bug where setting the NOSE_EXCLUDE_DIRS value in the environment
+# and then running the command that tox *would* use works, but when you use the same thing
+# inside of this file and get an error like this:
+# 
+# nose.plugins.nose_exclude: WARNING: The following path was not found: "test/async
+# nose.plugins.nose_exclude: WARNING: The following path was not found: taskcluster/async"
+# 
+# even though using python -c "import os ; print(os.getcwd())" shows that we're in the
+# same working directory that the code is in.
+# That's why we're doing a janky hack using environment variables, not because I like it.
+# PRs accepted!
+# 
+# And!!!! Tox for some reason forces all {env:X} substitutions to be full args in the
+# argv, which means that a value of "-a -b" would result in an argv of ["-a -b"].
+# Ugh.
+
 [testenv:py27]
 setenv =
-    NOSE_EXCLUDE_DIRS = test/async;taskcluster/async
-    NOSE_EXCLUDE_TESTS = test/async;
-
-[testenv:py35]
-setenv =
-    NOSE_EXCLUDE_DIRS =
-    NOSE_EXCLUDE_TESTS =
+    EX1 = --exclude-dir=test/async
+    EX2 = --exclude-dir=taskcluster/async
+    IG = "--ignore=.*async.*"
 
 [testenv]
 passenv =
     NO_TESTS_OVER_WIRE
 
 commands =
-    {envbindir}/python devDep.py
-    {envbindir}/python genCode.py
-    {envbindir}/python setup.py develop
-    {envbindir}/nosetests -v --with-xunit --rednose --force-color
+    {envpython} devDep.py
+    {envpython} genCode.py
+    {envpython} setup.py develop
+    {envpython} -c "import os ; print(os.getcwd())"
+    {envbindir}/nosetests -v --with-noseexclude --with-xunit --rednose --force-color {env:IG:} {env:EX1:} {env:EX2:}
