--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -22,7 +22,11 @@ tasks:
         - '-c'
         - >-
           go get -t github.com/taskcluster/taskcluster-cli/... 
-          && cd  /go/src/github.com/taskcluster/taskcluster-cli make && go test ./...
+          && cd  /go/src/github.com/taskcluster/taskcluster-cli 
+          && git fetch {{ event.head.repo.url }} {{ event.head.ref }} 
+          && git checkout {{ event.head.sha }} 
+          && make 
+          && go test ./...
     metadata:
       name: "TaskCluster .taskcluster.yml file"
       description: "All non-integration tests"
