Add gometalinter tests (#96)
* Add gometalinter tests

* Add go get -u command for imports

* Rearrange to get packages before checkout

* Add test flags

* Add vendor flag

* Run gometalinter through subpackages

* Rebase for fixes, lose misspell check

* Replace 'go get -u' with 'go install'

* Add gometalinter tests

* Add go get -u command for imports

* Rearrange to get packages before checkout

* Add test flags

* Add vendor flag

* Run gometalinter through subpackages

* Rebase for fixes, lose misspell check

* Replace 'go get -u' with 'go install'

* Move checkout to earlier in sequence

* Add flag to skip apis directory

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -26,7 +26,13 @@ tasks:
           && git fetch {{ event.head.repo.url }} {{ event.head.ref }} 
           && git checkout {{ event.head.sha }} 
           && make 
-          && go test ./...
+          && go test -v -race ./...
+          && go get -u github.com/alecthomas/gometalinter 
+          && gometalinter --install --force
+          && go install ./...
+          && gometalinter --vendor --disable-all --enable=gotype --enable=golint 
+          --enable=deadcode --enable=staticcheck --enable=misspell
+          --enable=vet --enable=vetshadow --enable=gosimple --skip=apis ./...
     metadata:
       name: "TaskCluster .taskcluster.yml file"
       description: "All non-integration tests"
