--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -1,7 +1,7 @@
 version: 0
 metadata:
-  name: "TaskCluster GitHub Tests"
-  description: "All non-integration tests for taskcluster github"
+  name: "TaskCluster .taskcluster.yml file"
+  description: "Tasks for taskcluster-cli"
   owner: "{{ event.head.user.email }}"
   source: "{{ event.head.repo.url }}"
 tasks:
@@ -36,7 +36,36 @@ tasks:
           --enable=vet --enable=vetshadow --enable=gosimple
           --skip=apis --skip=vendor ./...
     metadata:
-      name: "TaskCluster .taskcluster.yml file"
+      name: "TaskCluster GitHub Tests"
       description: "All non-integration tests"
+      owner: "{{ event.head.user.email }}"
+      source: "{{ event.head.repo.url }}"
+  - provisionerId: "{{ taskcluster.docker.provisionerId }}"
+    workerType: "{{ taskcluster.docker.workerType }}"
+    extra:
+      github:
+        env: true
+        events:
+          # TODO: tag - https://bugzilla.mozilla.org/show_bug.cgi?id=1344912
+          - release
+    payload:
+      maxRunTime: 3600
+      image: 'golang:1.8'
+      command:
+        - /bin/bash
+        - '-c'
+        - >-
+          go get -t github.com/taskcluster/taskcluster-cli/...
+          && cd  /go/src/github.com/taskcluster/taskcluster-cli
+          && git fetch {{ event.head.repo.url }} {{ event.head.ref }}
+          && git checkout {{ event.head.sha }}
+          && make taskcluster
+      artifacts:
+        public/taskcluster-linux:
+          path: /go/src/github.com/taskcluster/taskcluster-cli/taskcluster
+          type: file
+    metadata:
+      name: "Build a binary for release"
+      description: "Binary release"
       owner: "{{ event.head.user.email }}"
       source: "{{ event.head.repo.url }}"
