--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -35,6 +35,10 @@ tasks:
           --enable=deadcode --enable=staticcheck --enable=misspell
           --enable=vet --enable=vetshadow --enable=gosimple
           --skip=apis --skip=vendor ./...
+      artifacts:
+        public/taskcluster-linux:
+          path: /go/src/github.com/taskcluster/taskcluster-cli/taskcluster
+          type: file
     metadata:
       name: "TaskCluster GitHub Tests"
       description: "All non-integration tests"
@@ -51,21 +55,19 @@ tasks:
     payload:
       maxRunTime: 3600
       image: 'golang:1.8'
+      features:
+          taskclusterProxy: true
       command:
         - /bin/bash
         - '-c'
         - >-
           go get -t github.com/taskcluster/taskcluster-cli/...
           && cd  /go/src/github.com/taskcluster/taskcluster-cli
-          && git fetch {{ event.head.repo.url }} {{ event.head.ref }}
-          && git checkout {{ event.head.sha }}
-          && make taskcluster
-      artifacts:
-        public/taskcluster-linux:
-          path: /go/src/github.com/taskcluster/taskcluster-cli/taskcluster
-          type: file
+          && git fetch {{ event.head.repo.url }} {{ event.version }}
+          && git checkout FETCH_HEAD
+          && make upload
     metadata:
-      name: "Build a binary for release"
+      name: "Build and upload a binary for release"
       description: "Binary release"
       owner: "{{ event.head.user.email }}"
       source: "{{ event.head.repo.url }}"
