Avoid `go get` in travis build (#134)
* Should not 'go get' our packages, since this will pull in dependencies, which should be vendored

* Don't 'go get' the project that might pull in dependencies outside of vendor directory

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -21,8 +21,9 @@ tasks:
         - /bin/bash
         - '-c'
         - >-
-          go get -t github.com/taskcluster/taskcluster-cli
+          mkdir -p  /go/src/github.com/taskcluster/taskcluster-cli
           && cd  /go/src/github.com/taskcluster/taskcluster-cli 
+          && git init
           && git fetch {{ event.head.repo.url }} {{ event.head.ref }} 
           && git checkout {{ event.head.sha }} 
           && make 
