--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -14,6 +14,7 @@ tasks:
           - pull_request.opened
           - pull_request.synchronize
           - pull_request.reopened
+          - push
     payload:
       maxRunTime: 3600
       image: 'golang:1.8'
@@ -26,16 +27,35 @@ tasks:
           && git init
           && git fetch {{ event.head.repo.url }} {{ event.head.ref }}
           && git checkout {{ event.head.sha }}
-          && make
-          && go test -v -race ./...
-          && go get -u github.com/alecthomas/gometalinter
-          && gometalinter --install --force
-          && go install ./...
-          && gometalinter --vendor --disable-all --deadline 5m
-          --enable=gotype --enable=golint
-          --enable=deadcode --enable=staticcheck --enable=misspell
-          --enable=vet --enable=vetshadow --enable=gosimple
-          --skip=apis --skip=vendor ./...
+          && make lint
+    metadata:
+      name: "TaskCluster GitHub Lint Checks"
+      description: "All non-integration tests"
+      owner: "{{ event.head.user.email }}"
+      source: "{{ event.head.repo.url }}"
+
+  - provisionerId: "{{ taskcluster.docker.provisionerId }}"
+    workerType: "{{ taskcluster.docker.workerType }}"
+    extra:
+      github:
+        env: true
+        events:
+          - pull_request.opened
+          - pull_request.synchronize
+          - pull_request.reopened
+    payload:
+      maxRunTime: 3600
+      image: 'golang:1.8'
+      command:
+        - /bin/bash
+        - '-c'
+        - >-
+          mkdir -p  /go/src/github.com/taskcluster/taskcluster-cli
+          && cd  /go/src/github.com/taskcluster/taskcluster-cli
+          && git init
+          && git fetch {{ event.head.repo.url }} {{ event.head.ref }}
+          && git checkout {{ event.head.sha }}
+          && make test
       artifacts:
         public/taskcluster-linux:
           path: /go/src/github.com/taskcluster/taskcluster-cli/taskcluster
@@ -45,6 +65,7 @@ tasks:
       description: "All non-integration tests"
       owner: "{{ event.head.user.email }}"
       source: "{{ event.head.repo.url }}"
+
   - provisionerId: "{{ taskcluster.docker.provisionerId }}"
     workerType: "{{ taskcluster.docker.workerType }}"
     extra:
