--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -1,4 +1,5 @@
 version: 0
+allowPullRequests: public
 metadata:
   name: "TaskCluster .taskcluster.yml file"
   description: "Tasks for taskcluster-cli"
