--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -16,6 +16,8 @@ tasks:
           - pull_request.synchronize
           - pull_request.reopened
           - push
+        branches:
+          - master
     payload:
       maxRunTime: 3600
       image: 'golang:1.8'
@@ -44,6 +46,9 @@ tasks:
           - pull_request.opened
           - pull_request.synchronize
           - pull_request.reopened
+          - push
+        branches:
+          - master
     payload:
       maxRunTime: 3600
       image: 'golang:1.8'
@@ -75,6 +80,8 @@ tasks:
         events:
           # TODO: tag - https://bugzilla.mozilla.org/show_bug.cgi?id=1344912
           - release
+    scopes:
+      - auth:aws-s3:read-write:downloads-taskcluster-net/taskcluster-cli/
     payload:
       maxRunTime: 3600
       image: 'golang:1.8'
