--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -82,7 +82,9 @@ tasks:
           - release
     scopes:
       - auth:aws-s3:read-write:downloads-taskcluster-net/taskcluster-cli/
-      - queue:route:project.taskcluster.taskcluster-cli.latest
+      - queue:route:index.project.taskcluster.taskcluster-cli.latest
+    routes:
+      - index.project.taskcluster.taskcluster-cli.latest
     payload:
       maxRunTime: 3600
       image: 'golang:1.8'
