--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -94,10 +94,11 @@ tasks:
         - /bin/bash
         - '-c'
         - >-
-          go get -t github.com/taskcluster/taskcluster-cli/...
+          mkdir -p  /go/src/github.com/taskcluster/taskcluster-cli
           && cd  /go/src/github.com/taskcluster/taskcluster-cli
-          && git fetch {{ event.head.repo.url }} {{ event.version }}
-          && git checkout FETCH_HEAD
+          && git init
+          && git fetch {{ event.head.repo.url }} {{ event.head.ref }}
+          && git checkout {{ event.head.sha }}
           && make prep release
       artifacts:
         public:
