--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache: yarn
 node_js:
 - '6.10'
 - '8'
+before_install:
+# Required due to: https://github.com/travis-ci/travis-ci/issues/7951
+- curl -sSfL https://yarnpkg.com/install.sh | bash
+- export PATH=$HOME/.yarn/bin:$PATH
 install:
 - yarn install --frozen-lockfile
 script:
