--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_install:
 - export PATH=$HOME/.yarn/bin:$PATH
 install:
 - yarn install --frozen-lockfile
+before_script:
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 script:
 - yarn test
 - yarn build
