--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "lib/index.js",
   "author": "Eli Perelman <eli@eliperelman.com>",
   "license": "MPL-2.0",
+  "files": [
+    "src",
+    "lib"
+  ],
   "scripts": {
     "build": "neutrino build",
     "docs": "bin/generate-docs",
