--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "lib/index.js",
   "author": "Eli Perelman <eli@eliperelman.com>",
   "license": "MPL-2.0",
+  "repository": "taskcluster/taskcluster-client-web",
   "files": [
     "src",
     "lib"
