--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taskcluster-client-web",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "lib/index.js",
   "author": "Eli Perelman <eli@eliperelman.com>",
   "license": "MPL-2.0",
@@ -14,7 +14,7 @@
     "docs": "bin/generate-docs",
     "compile-clients": "bin/compile-clients",
     "list-clients": "bin/list-clients",
-    "prepare": "yarn update-all",
+    "prepare": "yarn build",
     "show-client": "bin/show-client",
     "test": "neutrino test",
     "update-all": "yarn compile-clients && yarn build && yarn docs"
