Include linting in tox (#90)
* Run lint as part of tox

* better linting

* Fix up some linting issues

* test.sh is no longer needed -- use tox

* Fix up some docs issues and support py27 and py35 generating utf8 docs

* restore readme.md header

* Update API

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ setenv =
     EX1 = --exclude-dir=test/async
     EX2 = --exclude-dir=taskcluster/async
     IG = "--ignore=.*async.*"
+    LINT_IG= "--exclude=*/async/*,*_async.py"
 
 [testenv]
 passenv =
@@ -34,5 +35,6 @@ commands =
     {envpython} devDep.py
     {envpython} genCode.py
     {envpython} setup.py develop
-    {envpython} -c "import os ; print(os.getcwd())"
+    {envpython} -m pip install flake8
+    ./lint.sh --python "{envpython}" --flake8 "{envbindir}/flake8"
     {envbindir}/nosetests -v --with-noseexclude --with-xunit --rednose --force-color {env:IG:} {env:EX1:} {env:EX2:}
